--- a/css/main.css
+++ b/css/main.css
@@ -142,38 +142,28 @@ h2 {
 
 nav { 
     background-color: white;
-    width: 95%;
+    width: 88%;
     margin: auto;
-   margin-top: 20px;
+    margin-top: 20px;
 }
 
 #menu {
     float: right;
-    text-align: end;
+    text-align: right;
 
 }
 
-#menu nav li {
-    box-sizing: border-box;
-    display: inline-block;
-   padding: 12px;
-    z-index: 1;
-    text-align: end;
-   
-}
 
 nav li {
     box-sizing: border-box;
     display: inline-block;
-   padding: 12px;
+    padding: 12px;
     z-index: 1;
-
-   
+    line-height: 0.5;
+    font-size: 0.8em;
+    padding-top: 0.2;
 }
 
-#menu a {
-    font-size: 1.5vw;
-}
 
 nav li:hover {
     background-color: white;
@@ -210,7 +200,7 @@ li a:hover {
 
 .dropdown {
     position: relative;
-    width: 15%;
+    width: 10%;
 }
 
 .dropdown-content {
@@ -387,6 +377,14 @@ li a:hover {
     height: 26em;
 
 }
+    
+    nav li {
+ 
+    line-height: 1;
+    font-size: 1em;
+    padding-top: 0.2;
+  
+}
     }
 
 
@@ -402,6 +400,13 @@ li a:hover {
     #gradient img {
  
         height: 28em;
+}
+    
+    nav li {
+ 
+    line-height: 1;
+    font-size: 1em;
+    padding-top: 0.2;
 }
     }
 
