--- a/css/main.css
+++ b/css/main.css
@@ -129,9 +129,24 @@ h1 {
 }
 
 h2 {
-
+    color:#4B4C4C;
     width: 100%;
     text-align: center;
+
+}
+
+p {
+    color: #4B4C4C;
+    -webkit-font-smoothing: antialiased;
+}
+
+a {
+    text-decoration: none;
+    
+}
+
+a:hover {
+    text-decoration: none;
 
 }
 
@@ -277,11 +292,13 @@ li a:hover {
 }
 
 
+
+
 .stars {
     background-color: white;
     position: absolute;
-    height: 10px;
-    width: 10px;
+    height: 6px;
+    width: 6px;
     border-radius: 50%;
     animation-iteration-count: infinite;
 }
@@ -332,6 +349,7 @@ li a:hover {
 #gradient img {
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 .max-container figure {
@@ -377,6 +395,145 @@ li a:hover {
     background: linear-gradient(black, #000099, #66c2ff, #ffcccc);  
 }*/
 
+/*About me*/
+
+.reg-container {
+    margin: 3%;
+}
+
+#about p {
+    margin: 0.5%;
+    text-align: center;
+    font-size: 1rem;
+    }
+
+.container {
+    margin-bottom: 10%;
+}
+
+.button {
+    background-color: #73CEC0;
+    display: inline-block;
+    color: #202020;
+    border-radius: 10px;
+    border-width: 11px;
+    padding: 0.7rem 3.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
+    text-decoration: none;
+    font-size: 1.1rem;
+    /*text-shadow: -1px 0 #B4B7B7, 0 1px #B4B7B7, 1px 0 #B4B7B7, 0 -1px #B4B7B7;*/
+    cursor: pointer;
+
+    
+}
+
+/*.button:after {
+    transition: all 300ms ease 0ms;
+}*/
+
+
+#about a {
+    text-decoration: none;
+
+}
+
+#about a:hover {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: #202020;
+}
+
+#about p {
+    line-height: 1.5;
+    padding: 0;
+}
+
+ 
+
+/*Portfolio*/
+
+
+
+.project-container {
+    padding-top: 4%;
+    display: flex;
+    margin: auto;
+    justify-content: space-around;
+    flex-flow: row wrap;
+    width: 95%;
+    align-items: center;
+    border-top: 1px solid #C5C5C5;
+    text-align: center;
+}
+
+
+.project-description {
+    width: 100%;
+    margin: 5% 0;
+}
+
+
+.project-img {
+    width: 100%;
+    margin: 5% 0;
+    height: auto;
+}
+
+.project-img img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.project-img img:hover {
+   -moz-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+
+    -webkit-transition: transform 1.05s ease-in-out;
+    -moz-transition:transform 1.05s ease-in-out;
+    -ms-transition:transform 1.05s ease-in-out;
+    cursor: pointer;
+}
+
+
+.project-description h2, p{
+    text-align: center;
+   padding-bottom: 4%;
+}
+
+#portfolio a {
+    text-decoration: none;
+    color: white;
+
+}
+
+#portfolio a:hover {
+    font-size: 1.2rem;
+    -moz-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+
+    -webkit-transition: transform 0.5s ease-in-out;
+    -moz-transition:transform 0.5s ease-in-out;
+    -ms-transition:transform 0.5s ease-in-out;
+   
+}
+
+
+
+
+
+
+
 
 
 
@@ -394,15 +551,39 @@ li a:hover {
 }*/
     
     nav li {
- 
+
     line-height: 1;
     font-size: 1em;
     padding-top: 0.2;
   
 }
+    
+    .container {
+        margin-bottom: 0;
+}
+    
+    .project-description {
+        width: 45%;
+        margin: 0;
+}
+
+
+    .project-img {
+        width: 45%;
+        margin: 0;
+        height: auto;
+}
+    .project-container{
+        height: 65vh;
+        text-align: left;
+        padding-top: 0;
     }
+    
+   .project-description h2, p{
+    text-align: left;  
+} 
 
-
+}
 @media only screen and (min-width: 1200px) {
     /* Desktop styles here */
     
@@ -423,7 +604,36 @@ li a:hover {
     font-size: 1em;
     padding-top: 0.2;
 }
+    
+    .container {
+        margin-bottom: 0;
+}
+    
+    
+    .project-description {
+        width: 45%;
+        margin: 0;
+}
+
+
+    .project-img {
+        flex-basis: 45%;
+        margin: 0;
+        height: auto;
+}
+    
+     .project-container{
+        height: 65vh;
+         text-align: left;
+         padding-top: 0;
     }
+
+    .project-description h2, p{
+        text-align: left;
+} 
+    
+}
+    
 
 
 
