--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,9 @@ img {
 
 .content-wrapper {
     width: 90%;
-    margin: 50px 0;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
@@ -612,7 +614,7 @@ li a:hover {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-    background-color: black;
+    background-color: #F2F4F4;
     margin-top: 2%;
 }
 
@@ -635,13 +637,7 @@ li a:hover {
     text-align: center;
 }
 
-#about p {
-    color: #ECF3F2;
-}
 
-#about h2 {
-    color: #73CEC0;
-}
 
 #about a {
     color: #73CEC0;
@@ -686,7 +682,7 @@ li a:hover {
 }
 
 #skill h4 {
-    margin: 3% 0;
+    margin-top: 30px;
 }
 
 #skills h2 {
@@ -695,144 +691,6 @@ li a:hover {
     margin-bottom: 50px;
 }
 
-
-/*
-.reg-container {
-    margin: 3%;
-    background-color: black;
-    padding: 5% 0;
-    margin: 0;
-}
-
-#about p {
-    margin: 0.5%;
-    text-align: center;
-    font-size: 1rem;
-
-    }
-
-
-.button {
-    background-color: #73CEC0;
-    display: inline-block;
-    color: #202020;
-    border-radius: 10px;
-    border-width: 11px;
-    padding: 0.7rem 3.5rem;
-    text-transform: uppercase;
-    font-weight: 500;
-    box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
-    text-decoration: none;
-    font-size: 1.1rem;
-   
-    cursor: pointer;
- 
-}
-
-#cv {
-    box-shadow: 10px 12px 18px -6px rgba(174,221,214,0.5);
-}
-*/
-/*.button:after {
-    transition: all 300ms ease 0ms;
-}*/
-
-/*
-#about a {
-    text-decoration: none;
-
-}
-
-#about a:hover {
-    text-decoration: none;
-    font-size: 1.2rem;
-    color: #202020;
-}
-
-#about p {
-    line-height: 1.5;
-    padding: 0;
-}
-
-
-.skills-container {
-    padding: 3% 2%;
-   background: black;  
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
-    width: 100%;
-    align-items: baseline;
-    text-align: center;
-    
-}
-
-
-.skill-type {
-    width: 100%;
-    margin: 5%;
-  
-}
-
-
-.skill-type img {
-    height: 100px;
-    width: auto;
-    display: block;
-    margin: auto;
-
-}
-
-.skill-type h4 {
-
-    margin-top: 2rem;
-}
-
-
-.skills-container h2 {
-
-    font-size: 3rem;
-
-}
-
-p {
-    width: 100%;
-    text-align: left;
-}
-
-#skills {
-        display: flex;
-        justify-content: space-between;
-        flex-flow: row wrap;
-        width: 90%;
-        align-items: center;
-        padding: 5% 0;
-        align-content: center;
-        text-align: center;
- 
-    } 
-
-#portfolio-pic {
-    width: 100%;
-    display: block;
-    height: auto;
-    margin: 0;
-}
-
-.skills-container figure {
-    width: 50%;
-    margin: auto;
-
-}
-
-.skills-container div{
-    width: 90%;
-    padding: 5%;
-}
-
-
-
-*/
 
 
 
@@ -937,27 +795,7 @@ p {
 
    
     
-   /* .skills-container article {
-    width: 30%;
-    margin: 5% 1%;
   
-}
-    
-     .skill-type {
-    width: 30%;
-    margin: 5% 1%;
-  
-}
-    
-   .skills-container figure {
-    width: 30%;
-    margin: auto;
-}
-
-.skills-container div{
-    width: 50%;
-    padding: 5%;
-}*/
     
 
 }
@@ -1040,29 +878,7 @@ nav li {
         width: 30%;
     }
     
-   /* #skills article {
-        display: flex;
-        justify-content: space-between;
-        flex-flow: column;
-    }*/
-    
-    
- /*   .skill-type {
-    width: 30%;
-    margin: 5% 1%;
   
-}
-    
-    
- .skills-container figure {
-    width: 30%;
-    margin: auto;
-}
-
-.skills-container div{
-    width: 50%;
-    padding: 5%;
-}*/
     
 }
 
