--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,11 @@ h2 {
 
 h3, h4 {
     text-align: center;
+    color:#4B4C4C;
+}
+
+h5 {
+    color:#4B4C4C;
 }
 
 p {
@@ -511,7 +516,7 @@ li a:hover {
 
 
 .project-container {
-    padding: 3% 0;
+    padding: 5% 0;
     display: flex;
     margin: auto;
     justify-content: space-around;
@@ -673,6 +678,7 @@ li a:hover {
 #skills article p {
     text-align: center;
     color: white;
+   
     }
 
 
@@ -683,6 +689,7 @@ li a:hover {
 
 #skill h4 {
     margin-top: 30px;
+    color: white;
 }
 
 #skills h2 {
@@ -693,10 +700,108 @@ li a:hover {
 
 
 
+/*contact*/
 
 
+#contact {
+    background-color: #f2f4f4;
+    padding: 20px 0;
+}
+
+#contact-details ul {
+    list-style: none;
+   text-align: center;
+    margin: 20px 0;
+}
+
+#contact-form h5 {
+    display: inline;
+}
+
+#contact h4 {
+    color: #73CEC0;
+}
+
+#contact h2 {
+    margin-bottom: 2rem;
+}
+
+input[type=text] {
+    box-sizing: border-box;
+    width: 100%;
+    font-style: italic;
+    background-color: white;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    border: none;
+}
 
 
+input[type='radio']:checked:after {
+        width: 15px;
+        height: 15px;
+        border-radius: 15px;
+        top: -2px;
+        left: -1px;
+        position: relative;
+        background-color: #73CEC0;
+        content: '';
+        display: inline-block;
+        visibility: visible;
+        border: 2px solid white;
+    }
+
+#enquiry {
+    padding-bottom: 20vh;
+}
+
+
+button[type='submit'] {
+   border: none;
+    background-color: #73CEC0;
+    display: inline-block;
+    color: white;
+    border-radius: 10px;
+    border-width: 11px;
+    padding: 0.7rem 3.5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    box-shadow: 0px 12px 18px -6px rgba(0,0,0,0.3);
+    text-decoration: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+    margin-top: 3%;
+
+}
+
+button[type='submit']:hover {
+    font-size: 1.2rem;
+    -moz-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -o-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+
+    -webkit-transition: transform 0.5s ease-in-out;
+    -moz-transition:transform 0.5s ease-in-out;
+    -ms-transition:transform 0.5s ease-in-out;
+        
+    }
+
+#budget {
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+
+#budget h5 {
+    margin-right: 20px;
+}
+
+label {
+    margin-right: 10px;
+}
 
 
 
@@ -777,6 +882,7 @@ li a:hover {
         justify-content: space-between;
         text-align: left;
     } 
+ 
    
     
     /*skills section*/
@@ -791,8 +897,28 @@ li a:hover {
         width: 30%;
     }
     
+   /*contact section*/
     
+    #get-in-touch {
+        display: flex;
+        justify-content: space-between;
+        flex-flow: row wrap;
+    }
+    
+    #contact-details ul {
 
+   text-align: left;
+    margin: 20px 0;
+}
+    
+  #get-in-touch h4 {
+        text-align: left;
+    }
+    
+    #contact-form {
+        width: 55%;
+    }
+    
    
     
   
@@ -878,7 +1004,27 @@ nav li {
         width: 30%;
     }
     
-  
+  /*contact section*/
+    
+    #get-in-touch {
+        display: flex;
+        justify-content: space-between;
+        flex-flow: row wrap;
+    }
+    
+   #contact-details ul {
+
+   text-align: left;
+    margin: 20px 0;
+}
+    
+    #get-in-touch h4 {
+        text-align: left;
+    }
+ 
+    #contact-form {
+        width: 55%;
+    }   
     
 }
 
