--- a/css/main.css
+++ b/css/main.css
@@ -282,9 +282,55 @@ li a:hover {
     z-index: 1;
 }
 
+
+/*footer*/
+
+.social-links {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.social-links li {
+    display: inline-block;
+    padding: 0 3%;
+}
+
+#social {
+    flex-basis: 45%;
+    text-align: end;   
+}
+
+
+#footer-content {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    background-color: black;
+    color: #73CEC0;;
+    padding: 3% 3% 1% 3%;
+
+}
+
+#copyright {
+    flex-basis: 55%;
+}
+
+#copyright p {
+    color: white;
+    font-size: 0.8rem;
+    text-align: left;
+}
+
+#social i {
+    color: #73CEC0;
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+
+
 /*name section*/
-
-
 
 
 #name h1 {
@@ -296,11 +342,11 @@ li a:hover {
 
 #name h1 span {
     color: #73CEC0;
+    text-align: center;
 }
 
-#name div{
-    padding: 0;
-    margin-top: 0;
+#name div {
+    padding-top: 3%;
 
 }
 
@@ -493,21 +539,6 @@ li a:hover {
 .code span {
     font-size: 1vw;
 }
-
-
-
-
-/*.max-container #back {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    top: 0;
-    left: 0;
-    background: linear-gradient(black, #000099, #66c2ff, #ffcccc);  
-}*/
-
 
  
 
