--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ li a:hover {
 .social-links li {
     display: inline-block;
     padding: 0 3%;
+    text-decoration: none;
 }
 
 
@@ -296,6 +297,7 @@ li a:hover {
     align-content: flex-end;
     align-items: flex-end;
     -ms-align-items: flex-end;
+    white-space: nowrap;
 
 }
 
