--- a/css/main.css
+++ b/css/main.css
@@ -292,7 +292,7 @@ li a:hover {
 .social-links ul li {
     text-align: end;
     float: left;
-    display: inline-block;
+    display: inline;
 }
 
 
