--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ li a:hover {
 .social-links li {
     display: inline-block;
     padding: 0 3%;
+    *display: inline;
 }
 
 .social-links ul li {
