--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ img {
 
 nav { 
     background-color: white;
-    width: 87%;
+    width: 95%;
     margin: auto;
     margin-top: 2%;
 }
@@ -192,7 +192,7 @@ nav li {
     padding: 12px;
     z-index: 1;
     line-height: 0.5;
-    font-size: 0.8em;
+    font-size: 0.8rem;
     padding-top: 0.2;
 }
 
@@ -232,25 +232,27 @@ li a:hover {
 
 .dropdown {
     position: relative;
-    width: 10%;
+    /*width: 10%;*/
 }
 
 .dropdown-content {
     position: absolute;
-    left: 0;
+    right: 0;
     text-align: left;
     display: none;
     top: 100%;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .dropdown-content li {
     background-color: white;
-    width: 100%;
+    /*width: auto;*/
 }
 
-.dropdown:hover .dropdown-content{
+/*.dropdown:hover .dropdown-content{
     display: block;
-}
+}*/
 
 .fa {
     color: #343434;
@@ -261,6 +263,10 @@ li a:hover {
     font-size: 1em;
 }
 
+#language {
+    margin-top: 0.5%;
+}
+
 
 #menu .fa {
     font-size: 2.3em;
@@ -268,12 +274,33 @@ li a:hover {
 
 .lang {
     display: inline-block;
-    width: 50px;
+    /*width: auto;*/
     z-index: 1;
 }
 
 
 /*footer*/
+
+
+#footer-content {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    width: 100%;
+    background-color: black;
+    color: #73CEC0;
+    padding: 3% 3% 0 3%;
+    
+}
+
+#social {
+    flex-basis: 45%;
+    text-align: end;
+    align-content: flex-end;
+    align-items: flex-end;
+    -ms-align-items: flex-end !important;
+
+}
 
 .social-links ul {
     list-style-type: none;
@@ -286,31 +313,18 @@ li a:hover {
 .social-links li {
     display: inline-block;
     padding: 0 3%;
-}
-
-
-#social {
-    flex-basis: 45%;
     text-align: end;
-    align-content: flex-end;
+}
+
+
+#social ul li {
     align-items: flex-end;
+    text-align: end;
+     -ms-text-align: end !important;
     -ms-align-items: flex-end !important;
-    clear: both;
-
 }
 
 
-#footer-content {
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
-    width: 100%;
-    background-color: black;
-    color: #73CEC0;
-    padding: 3% 3% 0 3%;
-    
-
-}
 
 #copyright {
     flex-basis: 48%;
@@ -350,13 +364,16 @@ li a:hover {
 
 }
 
-#name h2 {
+#title h1 {
     font-size: 3.5vw;
-    line-height: 2;
+    line-height: 1;
     color:#4B4C4C;
     text-align: center;
     width: 100%;
+    margin-bottom: 2%;
 }
+
+
 
 
 /*hero-img*/
@@ -745,7 +762,7 @@ li a:hover {
 #skills h2 {
     text-align: center;
     color: white;
-    margin-bottom: 50px;
+    margin-bottom: 2em;
 }
 
 /*testimonials*/
@@ -753,10 +770,23 @@ li a:hover {
 
 #reviews {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-flow: row wrap;
-    align-items: baseline;
+}
 
+#testimonials article {
+    flex-basis: 100%;
+    align-items: baseline;
+    margin-top: 3%;
+    margin-bottom: 0;  
+}
+
+#testimonials h2 {
+    margin-bottom: 1.5em;
+}
+
+#testimonials p {
+    text-align: center;
 }
 
 
@@ -951,6 +981,12 @@ label {
         margin-bottom: 0;
     }
     
+    /*testimonials*/
+    
+    #testimonials article {
+    flex-basis: 30%;
+    }
+    
    /*contact section*/
     
     #get-in-touch {
@@ -1044,12 +1080,17 @@ nav li {
         justify-content: space-between;
         
     }
-    
-    
+
     
   #skills article {
         width: 30%;
       margin-bottom: 0;
+    }
+    
+    /*testimonials*/
+    
+    #testimonials article {
+    flex-basis: 30%;
     }
     
   /*contact section*/
