--- a/css/main.css
+++ b/css/main.css
@@ -189,17 +189,18 @@ nav {
 nav li {
     box-sizing: border-box;
     display: inline-block;
-    padding: 12px;
+    padding: 11px;
     z-index: 1;
     line-height: 0.5;
-    font-size: 0.8rem;
+    font-size: 0.75rem;
     padding-top: 0.2;
+    width: auto;
 }
 
 
-nav li:hover {
+/*nav li:hover {
     background-color: white;
-}
+}*/
  
 li a {
     text-decoration: none;
@@ -241,14 +242,11 @@ li a:hover {
     text-align: left;
     display: none;
     top: 100%;
-    overflow: auto;
+    /*overflow: auto;*/
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.dropdown-content li {
-    background-color: white;
-    /*width: auto;*/
-}
+
 
 /*.dropdown:hover .dropdown-content{
     display: block;
@@ -346,6 +344,9 @@ li a:hover {
 
 /*name section*/
 
+#name .container {
+    margin-bottom: 2%;
+}
 
 #name h1 {
     font-weight: bolder;
@@ -371,6 +372,12 @@ li a:hover {
     text-align: center;
     width: 100%;
     margin-bottom: 2%;
+}
+
+#title .container {
+    margin: 0 0 1% 0;
+
+    
 }
 
 
