--- a/css/main.css
+++ b/css/main.css
@@ -181,7 +181,7 @@ nav {
 #menu {
     float: right;
     text-align: right;
-    width: 50px;
+    width: 10%;
 }
 
 
@@ -190,22 +190,17 @@ nav li {
     display: inline-block;
     padding: 11px;
     z-index: 1;
-    line-height: 0.5;
-    font-size: 1rem;
-    padding-top: 0.2;
+    line-height: 1;
+    font-size: 1em;
     background-color: white;
     cursor: pointer;
+
 }
 
-
-nav li:hover {
-    background-color: white;
-}
  
 li a {
     text-decoration: none;
-    color: #343434;
-       
+    color: #343434;      
 }
 
 #language a {
@@ -213,9 +208,10 @@ li a {
     font-size: 1.2em;
 }
 
-#language .nav-item a{
-    font-size: 1em;
 
+#language .lang-nav-item a{
+    font-size: 1em;
+     padding-right: 0;
 }
 
 #language li a:hover {
@@ -248,7 +244,6 @@ li a:hover {
 
 .dropdown-content li {
     background-color: white;
-    /*width: auto;*/
 }
 
 
@@ -256,13 +251,14 @@ li a:hover {
     color: #343434;
 }
 
+
 #language .fa {
     color: #73CEC0;
     font-size: 1em;
 }
 
 #language {
-    margin-top: 0.5%;
+    margin-top: 0.7%;
 }
 
 
@@ -272,8 +268,6 @@ li a:hover {
 
 .lang {
     display: inline-block;
-    /*width: auto;*/
-    z-index: 1;
 }
 
 
@@ -371,7 +365,7 @@ li a:hover {
     color:#4B4C4C;
     text-align: center;
     width: 100%;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
     text-align: center;
 }
 
@@ -408,8 +402,8 @@ li a:hover {
 }
 
 .star-2 {
-    margin-top: 10%;
-    margin-left: 10%;
+    margin-top: 9.5%;
+    margin-left: 9.5%;
     animation-duration: 1.1s;
     animation-name: twinkle;
 }
@@ -422,8 +416,8 @@ li a:hover {
 }
 
 .star-4 {
-    margin-top: 12%;
-    margin-left: 35%;
+    margin-top: 11.6%;
+    margin-left: 33%;
     animation-duration: 1.2s;
     animation-name: twinkle;
 }
@@ -971,8 +965,7 @@ label {
  nav li {
 
     line-height: 1;
-    font-size: 1rem;
-    padding-top: 0.2;
+    font-size: 1.1em;
   
 }
     
@@ -1077,8 +1070,7 @@ label {
 nav li {
  
     line-height: 1;
-    font-size: 1em;
-    padding-top: 0.2;
+    font-size: 1.1em;
 }
     
 .container {
