--- a/css/main.css
+++ b/css/main.css
@@ -239,6 +239,7 @@ li a:hover {
     top: 100%;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
+    background-color: white;
   
 }
 
@@ -938,7 +939,26 @@ label {
     color: #73CEC0;
 }
 
+.fadein {
+    opacity: 0;
+    transition: all 300ms ease-in;
+}
 
+.fadein-waypoint {
+    opacity: 1;
+}
+
+/*article {
+opacity: 0;
+transform: translate(0, 20px); 
+transition: all 3s;
+}
+
+article.visible {
+opacity: 1;
+transform: translate(0, 0); 
+}
+*/
 
 /*Dorothy*/
 
