--- a/css/main.css
+++ b/css/main.css
@@ -687,6 +687,7 @@ li a:hover {
 #about p {
     text-align: justify;
     font-size: 0.95rem;
+    
 }
 
 
@@ -757,6 +758,70 @@ li a:hover {
     color: white;
     margin-bottom: 2em;
 }
+
+/*diagrams*/
+
+#diagrams {
+    background-color: #EDECEA;
+    padding: 3% 0;
+    
+}
+
+#diagrams-img {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;  
+    align-items: center;
+}
+
+#diagrams-img figure {
+    width: 100%;
+    align-items: center;  
+}
+
+#diagrams-img img {
+    width: 100%;
+    height: 100%;
+}
+
+/*slide in the diagram from the left*/
+
+.diagram-animate-left {
+    animation: slidein-left 3s;
+}
+
+
+@keyframes slidein-left {
+  from {
+    margin-left: -50%;
+
+  }
+
+  to {
+    margin-left: 0%;
+
+  }
+}
+
+/*slide in the diagram from the right*/
+
+.diagram-animate-right {
+    animation: slidein-right 3s;
+}
+
+@keyframes slidein-right {
+  from {
+    margin-right: -50%;
+
+  }
+
+  to {
+    margin-right: 0%;
+
+  }
+}
+
+
 
 /*testimonials*/
 
@@ -941,7 +1006,7 @@ label {
 
 .fadein {
     opacity: 0;
-    transition: all 300ms ease-in;
+    transition: all 350ms ease-in;
 }
 
 .fadein-waypoint {
@@ -1045,9 +1110,14 @@ transform: translate(0, 0);
         margin-bottom: 0;
     }
     
+    /*diagrams*/
+    
+    #diagrams-img figure {
+    width: 45%;
+    }
+    
     /*testimonials*/
     
-   
     
      #testimonials article {
     flex-basis: 30%;
@@ -1151,6 +1221,12 @@ nav li {
   #skills article {
     width: 30%;
       margin-bottom: 0;
+    }
+    
+    /*diagrams*/
+    
+    #diagrams-img figure {
+    width: 45%;
     }
     
     /*testimonials*/
